# set-rust

./: Cargo.toml  Makefile  index-1e60e220aaa2f408.js  index-1e60e220aaa2f408_bg.wasm  index-320eb8f95bf610a1.js  index-320eb8f95bf610a1_bg.wasm  index-450ff8769859c4f1.js  index-450ff8769859c4f1_bg.wasm  index-753a5c32961abfd7.js  index-753a5c32961abfd7_bg.wasm  index-7890114ff803fe07.js  index-7890114ff803fe07_bg.wasm  index-cf5e2f49f3e90638.js  index-cf5e2f49f3e90638_bg.wasm  index-e0a01965fe618bf6.js  index-e0a01965fe618bf6_bg.wasm  index-e9c4df3622258729.js  index-e9c4df3622258729_bg.wasm  index-ed59c72ecd14be1d.js  index-ed59c72ecd14be1d_bg.wasm  index.html
.github/workflows/: continuous_deployment.yml  continuous_integration.yml
src/: errors.rs  lib.rs  main.rs
src/attributes/: color.rs  mod.rs  number.rs  shading.rs  symbol.rs
src/cards/: card.rs  hand.rs  mod.rs  pack.rs  set.rs  stock.rs
src/cards/pips/: color.rs  mod.rs  number.rs  shading.rs  symbol.rs
src/decks/: deck.rs
src/sets/: mod.rs  set.rs
src/ui/: index.rs  mod.rs
src/ui/components/: card.rs  table.rs
src/ui/games/: card.rs  mod.rs
src/ui/instructions/: mod.rs
src/ui/yew_helpers/: switch.rs
src/web/: card_component.rs  game_component.rs  mod.rs
static/: index.html  styles.css
