[package]
name = "set"
version = "0.1.0"
authors = ["Philippe Vinchon <p.vinchon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.9.0"
rand = "0.7.3"
yew = "0.17"
wasm-bindgen = "0.2.67"
